[tool.poetry]
name="Minecraft Host GUI"
description = "want to make it easier to manage your server locally? then this is your tool! where you can manage players, edit settings, and install mods/plugins (vanilla/modded/plugins/hybrid/proxy/pumpkin)."
version = "0.1 Beta"
authors = ["Barrett Becker/Sonic3Modder"]
readme = "README.md"

[tool.poetry.dependences]
anyio==4.10.0
build==1.3.0
CacheControl==0.14.3
certifi==2025.8.3
charset-normalizer==3.4.3
cleo==2.1.0
colorama==0.4.6
crashtest==0.4.1
CTkMessagebox==2.7
customtkinter==5.2.2
darkdetect==0.8.0
distlib==0.4.0
docopt==0.6.2
dulwich==0.22.8
fastjsonschema==2.21.2
filelock==3.19.1
findpython==0.6.3
h11==0.16.0
httpcore==1.0.9
httpx==0.28.1
idna==3.10
installer==0.7.0
jaraco.classes==3.4.0
jaraco.context==6.0.1
jaraco.functools==4.3.0
keyring==25.6.0
more-itertools==10.7.0
msgpack==1.1.1
packaging==25.0
pbs-installer==2025.8.18
pillow==11.3.0
pipreqs==0.4.13
pkginfo==1.12.1.2
platformdirs==4.4.0
poetry==2.1.4
poetry-core==2.1.3
psutil==7.0.0
pyproject_hooks==1.2.0
pywin32-ctypes==0.2.3
RapidFuzz==3.13.0
requests==2.32.5
requests-toolbelt==1.0.0
shellingham==1.5.4
sniffio==1.3.1
tomlkit==0.13.3
trove-classifiers==2025.8.26.11
urllib3==2.5.0
virtualenv==20.32.0
yarg==0.1.10
zstandard==0.24.0
