[tool.poetry]
name = "minecraft-host-gui"
version = "0.1.0-beta"
description = "A tool to make managing your Minecraft server locally easier. Manage players, edit settings, and install mods/plugins (vanilla/modded/plugins/hybrid/proxy/pumpkin)."
authors = ["Barrett Becker <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "mchostgui"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
customtkinter = "^5.2.2"
CTkMessagebox = "^2.7"
pillow = "^11.3.0"
psutil = "^7.0.0"

[tool.poetry.virtualenvs]
create = true
in-project = true
no-pip = true
no-setuptools = true
no-wheel = true
no-gitignore = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
